--- a/www/css/style.css
+++ b/www/css/style.css
@@ -11,6 +11,7 @@ html,body {
   padding: 10px;
   margin: 5px;
   height: 40%;
+  width: 90%;
   background: white;
 }
 
@@ -22,3 +23,4 @@ html,body {
   content: "▶";
   color: red;
 }
+
